# paper-fetcher

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
examples/: identifiers.txt
paper_fetcher/: __init__.py  auth.py  cli.py  config.py  fetcher.py  history.py  mcp_server.py  models.py
paper_fetcher/extractors/: pdf_extractor.py
paper_fetcher/extractors/publisher_adapters/: elsevier.py
paper_fetcher/sources/: doi_resolver.py  elsevier_api.py  google_scholar.py  pubmed.py  pubmed_search.py  unpaywall.py
paper_fetcher/utils/: __init__.py  progress.py  retry.py
