[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-fetcher"
version = "0.1.0"
description = "Unified academic paper fetcher with PubMed, Google Scholar, and Semantic Scholar support"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pymupdf>=1.23.0",
    "mcp[cli]>=1.0.0",
    "scholarly>=1.7.0",
]

[project.scripts]
paper-fetcher = "paper_fetcher.cli:app"
paper-fetcher-mcp = "paper_fetcher.mcp_server:main"

[tool.setuptools.packages.find]
include = ["paper_fetcher*"]
